--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <div class="header-content ps-3 pt-2">
                             <h5 class="fw-bold mb-0">SHOPPING CRAFT</h3>
                                 <p class="mb-0"><span><i class="fa-solid fa-location-dot"></i> </span>
-                                    Pune &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajket &nbsp;
+                                    Pune &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajkot &nbsp;
                                     <span><i class="fa-solid fa-location-dot"></i></span> Mumbai
                                 </p>
                         </div>
@@ -1180,9 +1180,7 @@
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Darshit Dobariya (CEO)<br> <strong>FLIEO INTERNATIONAL</strong><br>Shed No. 2 Revenue
-                                Survey No. 259, Plot No. 56 Kothariya Solvent Rajkot Rajkot Gujarat 360022<br> Rajkot -
-                                360022, Gujarat, India</span><br>
+                            <span>Mumbai, Pune, Rajkot</span><br>
                             <a href="#"> <span>Get Directions</span>
                                 <i class="fa-solid fa-right-long text-white"></i></a>
                         </div>
@@ -1204,7 +1202,7 @@
                                 <i class="fa-solid fa-phone contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>08044942496</span>
+                            <span>9175371081</span>
                         </div>
                         </a>
                     </div>
