--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
                                     class="fa-brands fa-linkedin-in"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="#"><i
                                     class="fa-brands fa-x-twitter"></i></a></span>
-                        <span class="contact-socialMediaIcon"><a href="#"><i
+                        <span class="contact-socialMediaIcon"><a href="https://wa.link/tlxn9m"><i
                                     class="fa-brands fa-whatsapp"></i></a></span>
                         <span class="contact-socialMediaIcon"><a href="mailto:prash108nc@gmail.com"><i
                                     class="fa-solid fa-envelope"></i></a></span>
