add product page

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <!-- Header start -->
-    <header>
-        <div class="container-fluid py-3 px-md-5 px-sm-2 ">
+    <header class="sticky-top bg-white">
+        <div class="container-fluid py-1 px-md-5 px-sm-2 ">
             <div class="row">
                 <div class="col-lg-6 col-md-5 mx-auto mx-lg-0">
                     <div class="d-flex align-items-center">
                         <!-- <img src="./assets/img/flieo.webp" alt="#" class="flieo"> -->
                         <div class="header-content ps-3 pt-2">
-                            <h5 class="fw-bold mb-0">SHOPPING CRAFT</h3>
+                            <h5 class="fw-bold mb-0 logo">SHOPPING CRAFT</h3>
                                 <p class="mb-0"><span><i class="fa-solid fa-location-dot"></i> </span>
                                     Pune &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajkot &nbsp;
                                     <span><i class="fa-solid fa-location-dot"></i></span> Mumbai
@@ -31,15 +31,11 @@
                 <div class="col-auto mx-auto ms-lg-auto mx-lg-0">
                     <div class="row">
                         <div class="col-auto p-1 p-md-2">
-                            <img src="./assets/img/sprite2.png" alt="">
-                        </div>
-                        <div class="col-auto p-1 p-md-2">
                             <a href="tel:9175371081">
                                 <div class="header-contact d-flex align-items-center">
                                     <span><i class="fa-solid fa-phone-volume"></i></span>
                                     <div>
                                         <h6 class="mb-0 fw-bold">Call 9175371081 </h6>
-                                        <p class="mb-0"> 79% Response rate </p>
                                     </div>
                                 </div>
                             </a>
@@ -65,9 +61,9 @@
             <div class="row">
                 <div class="col-auto ">
                     <ul class="nav-item list-unstyled mb-0">
-                        <li><a href="#">HOME</a> </li>
+                        <li><a href="index.html">HOME</a> </li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="#">Shilpra Play House</a></li>
+                        <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
                         <li><a href="#">Bio Veda Organic</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
@@ -78,7 +74,7 @@
                 </div>
                 <div class="col-auto ms-auto">
                     <div class="input-group">
-                        <input class="form-control" type="text" id="ss" placeholder="Search Products/Services" size="5">
+                        <input class="form-control" type="text" placeholder="Search Products/Services" size="5">
                         <div class="input-group-text">
                             <i class="fa-solid fa-magnifying-glass"></i>
                             &nbsp; Search
@@ -92,14 +88,14 @@
 
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
-            <h5 class="offcanvas-title fw-bold">SHOPPING CRAFT</h5>
+            <h5 class="offcanvas-title fw-bold logo">SHOPPING CRAFT</h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="#">HOME</a> </li>
+                <li><a href="index.html">HOME</a> </li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Shilpra Play House</a></li>
+                <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
                 <li><a href="#">Bio Veda Organic</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
