--- a/index.html
+++ b/index.html
@@ -5,49 +5,116 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPPING CRAFT</title>
-    <!-- <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+    <!-- top-header start -->
+    <section id="topheader">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center">
+                    Save Up to 15% on Bulk Order
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- top-header start -->
     <!-- Header start -->
     <header class="sticky-top bg-white">
-        <div class="container-fluid py-1 px-md-5 px-sm-2 ">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 col-md-5 mx-auto mx-lg-0">
-                    <div class="d-flex align-items-center">
-                        <!-- <img src="./assets/img/flieo.webp" alt="#" class="flieo"> -->
-                        <div class="header-content ps-3 pt-2">
-                            <h5 class="fw-bold mb-0 logo">SHOPPING CRAFT</h3>
-                                <p class="mb-0"><span><i class="fa-solid fa-location-dot"></i> </span>
-                                    Pune &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajkot &nbsp;
-                                    <span><i class="fa-solid fa-location-dot"></i></span> Mumbai
-                                </p>
-                        </div>
-                    </div>
+                <div class="col-auto d-block d-md-none">
+                     <button class="nav-button" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                        <i class="fa-solid fa-bars"></i>
+                    </button>
                 </div>
-                <div class="col-auto mx-auto ms-lg-auto mx-lg-0">
-                    <div class="row">
-                        <div class="col-auto p-1 p-md-2">
-                            <a href="tel:9175371081">
-                                <div class="header-contact d-flex align-items-center">
-                                    <span><i class="fa-solid fa-phone-volume"></i></span>
-                                    <div>
-                                        <h6 class="mb-0 fw-bold">Call 9175371081 </h6>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-auto p-1 p-md-2">
-                            <a href="mailto:prash108nc@gmail.com">
-                                <button class="header-button">
-                                    <span>
-                                        <i class="fa-solid fa-envelope"></i>
-                                    </span>
-                                    <h6 class="fw-bold mb-0">Send Email</h6>
-                                </button></a>
+                <div class="col-auto py-1 ">
+                    <img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid">
+                </div>
+                <div class="col-auto mx-auto d-none d-md-block">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="./shilpra-play-house.html">Toys & Games
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                            <ul class="dropdown-menu">
+                                <table class="table mb-0">
+                                    <tbody>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="#"> Frontend Development </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a href="#" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-auto ms-lg-auto mx-auto">
+                    <div class="input-group">
+                        <input class="form-control" type="text" placeholder="Search Products/Services" id="Search">
+                        <div class="input-group-text">
+                            <label for="Search">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            &nbsp; Search
+                            </label>
                         </div>
                     </div>
                 </div>
@@ -55,37 +122,7 @@
         </div>
     </header>
     <!-- Header end -->
-    <!-- navbar section start -->
-    <nav>
-        <div class="container-fulid px-5">
-            <div class="row">
-                <div class="col-auto ">
-                    <ul class="nav-item list-unstyled mb-0">
-                        <li><a href="index.html">HOME</a> </li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
-                        <li><a href="#">Bio Veda Organic</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                    <button class="nav-button" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                        <i class="fa-solid fa-bars"></i>
-                    </button>
-                </div>
-                <div class="col-auto ms-auto">
-                    <div class="input-group">
-                        <input class="form-control" type="text" placeholder="Search Products/Services" size="5">
-                        <div class="input-group-text">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            &nbsp; Search
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </nav>
-
+    <!-- offcanvas section start -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title fw-bold logo">SHOPPING CRAFT</h5>
@@ -96,13 +133,11 @@
                 <li><a href="index.html">HOME</a> </li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
-                <li><a href="#">Bio Veda Organic</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
     </div>
-    <!-- navbar section end -->
-
+    <!-- offcanvas section end -->
     <!-- banner top start -->
     <section class="litter">
         <div class="container-fluid">
@@ -131,8 +166,6 @@
         </div>
     </section>
     <!-- banner top end -->
-
-
     <!-- product start-->
     <section class="jk-banner-area pt-4">
         <div class="container-fluid">
@@ -1163,8 +1196,6 @@
         </div>
     </section>
     <!-- product end-->
-
-
     <!-- contact start -->
     <section class="contact">
         <div class="container-fluid px-5">
@@ -1176,7 +1207,7 @@
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Mumbai, Pune, Rajkot</span><br>
+                            <span>Mumbai, Delhi, Rajkot</span><br>
                             <a href="#"> <span>Get Directions</span>
                                 <i class="fa-solid fa-right-long text-white"></i></a>
                         </div>
@@ -1238,8 +1269,6 @@
         </div>
     </section>
     <!-- contact end -->
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
 
