--- a/shilpra-play-house.html
+++ b/shilpra-play-house.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHOPPING CRAFT</title>
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/shilpra-play-house.css">
@@ -13,17 +14,16 @@
 <body>
     <!-- Header start -->
     <header class="sticky-top bg-white">
-        <div class="container-fluid py-1 px-md-5 px-sm-2 ">
+        <div class="container-fluid px-md-5 px-sm-2 ">
             <div class="row">
                 <div class="col-lg-6 col-md-5 mx-auto mx-lg-0">
                     <div class="d-flex align-items-center">
-                        <!-- <img src="./assets/img/flieo.webp" alt="#" class="flieo"> -->
+                        <img src="./assets/img/logo.png" alt="#" class="flieo">
                         <div class="header-content ps-3 pt-2">
-                            <h5 class="fw-bold mb-0 logo">SHOPPING CRAFT</h3>
-                                <p class="mb-0"><span><i class="fa-solid fa-location-dot"></i> </span>
-                                    Pune &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajkot &nbsp;
-                                    <span><i class="fa-solid fa-location-dot"></i></span> Mumbai
-                                </p>
+                            <p class="mb-0"><span><i class="fa-solid fa-location-dot"></i> </span>
+                                Delhi &nbsp; <span><i class="fa-solid fa-location-dot"></i></span> Rajkot &nbsp;
+                                <span><i class="fa-solid fa-location-dot"></i></span> Mumbai
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,6 @@
                         <li><a href="index.html">HOME</a> </li>
                         <li><a href="#">About Us</a></li>
                         <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
-                        <li><a href="#">Bio Veda Organic</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                     <button class="nav-button" type="button" data-bs-toggle="offcanvas"
@@ -95,7 +94,6 @@
                 <li><a href="index.html">HOME</a> </li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="shilpra-play-house.html">Shilpra Play House</a></li>
-                <li><a href="#">Bio Veda Organic</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
@@ -210,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col d-flex mb-3">
+                <div class="col d-flex mb-3">
                     <div class="product1">
                         <a href="#"><img src="./assets/img/game21.webp" alt="#" class="img-fluid rounded-3 w-100"></a>
                         <div class="px-3 pb-3">
@@ -227,7 +225,8 @@
                         <a href="#"><img src="./assets/img/game22.webp" alt="#" class="img-fluid rounded-3 w-100"></a>
                         <div class="px-3 pb-3">
                             <h5 class="pt-2"><a href="#" class="kids">Birthday Return Gifts</a></h5>
-                            <p><a href="#" class="kids">Gobble Tic Tac Toe 3D Game For Family & Friends Fun Nights</a></p>
+                            <p><a href="#" class="kids">Gobble Tic Tac Toe 3D Game For Family & Friends Fun Nights</a>
+                            </p>
                             <p><a href="#" class="kids">Magic Beans Cube</a></p>
                             <a href="#" class="view"><span>View All</span></a>
                         </div>
@@ -256,13 +255,14 @@
                         </div>
                     </div>
                 </div>
-                   <div class="col d-flex mb-3">
+                <div class="col d-flex mb-3">
                     <div class="product1">
                         <a href="#"><img src="./assets/img/game24.webp" alt="#" class="img-fluid rounded-3 w-100"></a>
                         <div class="px-3 pb-3">
                             <h5 class="pt-2"><a href="#" class="kids">Outdoor Toys</a></h5>
                             <p><a href="#" class="kids">Airplane Launcher Gun</a></p>
-                            <p><a href="#" class="kids">Solo Tennis Trainer For Outdoor, Self Practice tool For Kids</a></p>
+                            <p><a href="#" class="kids">Solo Tennis Trainer For Outdoor, Self Practice tool For Kids</a>
+                            </p>
                             <a href="#" class="view"><span>View All</span></a>
                         </div>
                     </div>
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                 </div>
-                   <div class="col d-flex mb-3">
+                <div class="col d-flex mb-3">
                     <div class="product1">
                         <a href="#"><img src="./assets/img/game23.webp" alt="#" class="img-fluid rounded-3 w-100"></a>
                         <div class="px-3 pb-3">
@@ -348,14 +348,6 @@
         </div>
     </section>
     <!-- product end-->
-
-
-
-
-
-
-
-
     <!-- contact start -->
     <section class="contact">
         <div class="container-fluid px-5">
@@ -367,7 +359,7 @@
                             <i class="fa-solid fa-location-dot contact-logo"></i>
                         </div>
                         <div class="px-3">
-                            <span>Mumbai, Pune, Rajkot</span><br>
+                            <span>Mumbai, Delhi, Rajkot</span><br>
                             <a href="#"> <span>Get Directions</span>
                                 <i class="fa-solid fa-right-long text-white"></i></a>
                         </div>
