update product page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHOPPING CRAFT</title>
+    <title>Shipra - Kids Toys and Musical Toys</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-    <!-- Header start -->
+     <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,17 +34,17 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid">
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About Us</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="./shilpra-play-house.html">Toys & Games
+                        <li class="nav-item"><a class="nav-link" href="products.html">Toys & Games
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                             <ul class="dropdown-menu">
@@ -138,7 +138,7 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid">
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -146,15 +146,15 @@
             <ul class="nav-item list-unstyled mb-0">
                 <li><a href="index.html">Home</a> </li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="shilpra-play-house.html" class="d-flex justify-content-between" role="button"
-                        data-bs-toggle="offcanvas" data-bs-target="#offcanvasDropdown"
-                        aria-controls="offcanvasDropdown">
+                <li><a href="#" class="d-flex justify-content-between" role="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasDropdown" aria-controls="offcanvasDropdown">
                         <span>Toys & Games</span>
                         <span class="pe-3">
                             <i class="fa-solid fa-angle-right"> </i>
                         </span>
                     </a>
                 </li>
+                <li><a href="products.html">Products</a></li>
                 <li><a href="#">Birthday Gifts</a></li>
                 <li><a href="#">Corporate Gifts</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -164,16 +164,16 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid">
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
                 <p class="mb-0">
-                <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                    <span>
-                        <i class="fa-solid fa-angle-left"> </i>
-                    </span>
-                    Toys & Games
-                </a>
-            </p>
+                    <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+                        <span>
+                            <i class="fa-solid fa-angle-left"> </i>
+                        </span>
+                        Toys & Games
+                    </a>
+                </p>
             </h5>
             <button type="button" class="btn-close pt-0" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 
@@ -237,8 +237,8 @@
                             <a href="#"><img src="./assets/img/home_game-1.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Rotating Cube Magic Bean Cube Spinner</a>
+                            <h2 class="text-center">
+                                <a href="#"  >Rotating Cube</a>
                             </h2>
                         </div>
                     </div>
@@ -249,8 +249,8 @@
                             <a href="#"><img src="./assets/img/home_game-2.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Triangle Chess, Chain Chess Game</a>
+                            <h2 class="text-center">
+                                <a href="#"  >Triangle Chess</a>
                             </h2>
                         </div>
                     </div>
@@ -261,8 +261,8 @@
                             <a href="#"><img src="./assets/img/home_game-3.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">5 Key Xylophone Musical Toy With 2 Sticks</a>
+                            <h2 class="text-center">
+                                <a href="#">Xylophone Toy</a>
                             </h2>
                         </div>
                     </div>
@@ -273,8 +273,8 @@
                             <a href="#"><img src="./assets/img/home_game-4.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">60 Pcs Plastic Building Block Toy</a>
+                            <h2 class="text-center">
+                                <a href="#"> Building Block</a>
                             </h2>
                         </div>
                     </div>
@@ -296,8 +296,8 @@
                             <a href="#"><img src="./assets/img/home_game-5.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Tri ring Game</a>
+                            <h2 class="text-center">
+                                <a href="#"  >Tri ring Game</a>
                             </h2>
                         </div>
                     </div>
@@ -308,8 +308,8 @@
                             <a href="#"><img src="./assets/img/home_game-6.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Alpha Numeric Construction Puzzle</a>
+                            <h2 class="text-center">
+                                <a href="#">Alpha Puzzle</a>
                             </h2>
                         </div>
                     </div>
@@ -320,8 +320,8 @@
                             <a href="#"><img src="./assets/img/home_game-7.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Triangle Chess Fun Board Game</a>
+                            <h2 class="text-center">
+                                <a href="#">Triangle Chess</a>
                             </h2>
                         </div>
                     </div>
@@ -332,8 +332,8 @@
                             <a href="#"><img src="./assets/img/home_game-8.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Frog Tree Balance Family And Friends Fun Game</a>
+                            <h2 class="text-center">
+                                <a href="#">Frog Tree Balance</a>
                             </h2>
                         </div>
                     </div>
@@ -355,8 +355,8 @@
                             <a href="#"><img src="./assets/img/home_game-9.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Jumping Pogo Stick</a>
+                            <h2 class="text-center">
+                                <a href="#">Jumping Pogo</a>
                             </h2>
                         </div>
                     </div>
@@ -367,8 +367,8 @@
                             <a href="#"><img src="./assets/img/home_game-10.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Foam Pogo jumper</a>
+                            <h2 class="text-center">
+                                <a href="#"> Pogo jumper</a>
                             </h2>
                         </div>
                     </div>
@@ -379,8 +379,8 @@
                             <a href="#"><img src="./assets/img/home_game-11.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Table Tennis Trainer Indoor 2 Player Game</a>
+                            <h2 class="text-center">
+                                <a href="#"  >Table Tennis Indoor</a>
                             </h2>
                         </div>
                     </div>
@@ -391,8 +391,8 @@
                             <a href="#"><img src="./assets/img/home_game-12.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Height Increaser Foam Pogo Jumper </a>
+                            <h2 class="text-center">
+                                <a href="#"  >H I Pogo Jumper </a>
                             </h2>
                         </div>
                     </div>
@@ -414,8 +414,8 @@
                             <a href="#"><img src="./assets/img/home_game-13.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">5 Key Xylophone Musical Toy With 2 Sticks</a>
+                            <h2 class="text-center">
+                                <a href="#">Xylophone Toy</a>
                             </h2>
                         </div>
                     </div>
@@ -426,8 +426,8 @@
                             <a href="#"><img src="./assets/img/home_game-14.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">5 Key Xylophone</a>
+                            <h2 class="text-center">
+                                <a href="#"  >5 Key Xylophone</a>
                             </h2>
                         </div>
                     </div>
@@ -438,8 +438,8 @@
                             <a href="#"><img src="./assets/img/home_game-15.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Infinity Smart Track Educational Toy</a>
+                            <h2 class="text-center">
+                                <a href="#"  >Smart Track Toy</a>
                             </h2>
                         </div>
                     </div>
@@ -450,8 +450,8 @@
                             <a href="#"><img src="./assets/img/home_game-16.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">5 Key Xylophone Musical Toy With 2 Sticks</a>
+                            <h2 class="text-center">
+                                <a href="#"  >5 Key Xylophone</a>
                             </h2>
                         </div>
                     </div>
@@ -473,8 +473,8 @@
                             <a href="#"><img src="./assets/img/home_game-17.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Rotating Cube Magic Bean</a>
+                            <h2 class="text-center">
+                                <a href="#">Rotating Bean</a>
                             </h2>
                         </div>
                     </div>
@@ -485,8 +485,8 @@
                             <a href="#"><img src="./assets/img/home_game-18.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Shape Learning And Matching Game</a>
+                            <h2 class="text-center">
+                                <a href="#">Shape Learning</a>
                             </h2>
                         </div>
                     </div>
@@ -497,8 +497,8 @@
                             <a href="#"><img src="./assets/img/home_game-19.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">100 Pcs Starlink Building Blocks Set</a>
+                            <h2 class="text-center">
+                                <a href="#">Starlink Blocks </a>
                             </h2>
                         </div>
                     </div>
@@ -509,8 +509,8 @@
                             <a href="#"><img src="./assets/img/home_game-20.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Iq Games For Kids</a>
+                            <h2 class="text-center">
+                                <a href="#">Iq Games</a>
                             </h2>
                         </div>
                     </div>
@@ -532,8 +532,8 @@
                             <a href="#"><img src="./assets/img/home_game-21.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Rattle For Newborn</a>
+                            <h2 class="text-center">
+                                <a href="#">Rattle For Newborn</a>
                             </h2>
                         </div>
                     </div>
@@ -544,8 +544,8 @@
                             <a href="#"><img src="./assets/img/home_game-22.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Baby's First Block Set</a>
+                            <h2 class="text-center">
+                                <a href="#">Block Set</a>
                             </h2>
                         </div>
                     </div>
@@ -556,8 +556,8 @@
                             <a href="#"><img src="./assets/img/home_game-23.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Baby Rattles 8 Pcs</a>
+                            <h2 class="text-center">
+                                <a href="#">Baby Rattles</a>
                             </h2>
                         </div>
                     </div>
@@ -568,8 +568,8 @@
                             <a href="#"><img src="./assets/img/home_game-24.webp" alt="#" class="img-fluid"></a>
                         </div>
                         <div class="jk-banner-item-content">
-                            <h2>
-                                <a href="#" class="ellipsis-text">Shape Matching Game For kids</a>
+                            <h2 class="text-center">
+                                <a href="#">Shape Matching</a>
                             </h2>
                         </div>
                     </div>
