--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-     <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -34,7 +34,8 @@
                     </button>
                 </div>
                 <div class="col-auto py-1 ">
-                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
+                    <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                            class="img-fluid"></a>
                 </div>
                 <div class="col-auto mx-auto d-none d-md-block">
                     <ul class="nav">
@@ -138,7 +139,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        class="img-fluid"></a>
             </h5>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -164,7 +166,8 @@
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasDropdown" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header align-items-start">
             <h5 class="offcanvas-title">
-                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt="" class="img-fluid"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" style="max-width: 150px;" alt=""
+                        class="img-fluid"></a>
                 <p class="mb-0">
                     <a href="#" class="text-black h6" role="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
@@ -195,30 +198,26 @@
     </div>
     <!-- offcanvas section end -->
     <!-- banner top start -->
-    <section class="litter">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12 px-5">
-
-                    <div class="row">
-                        <div class="col">
-                            <img src="./assets/img/0-11_months_7_2.webp" alt="#" class="img-fluid">
-                        </div>
-                        <div class="col">
-                            <img src="./assets/img/1-2 years.webp" alt="#" class="img-fluid">
-                        </div>
-                        <div class="col">
-                            <img src="./assets/img/3-6 years.webp" alt="#" class="img-fluid">
-                        </div>
-                        <div class="col">
-                            <img src="./assets/img/7-12 years.webp" alt="#" class="img-fluid">
-                        </div>
-                        <div class="col">
-                            <img src="./assets/img/13-17 years.webp" alt="#" class="img-fluid">
-                        </div>
-                    </div>
+    <section class="banner">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="...">
                 </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
     <!-- banner top end -->
@@ -238,7 +237,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >Rotating Cube</a>
+                                <a href="#">Rotating Cube</a>
                             </h2>
                         </div>
                     </div>
@@ -250,7 +249,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >Triangle Chess</a>
+                                <a href="#">Triangle Chess</a>
                             </h2>
                         </div>
                     </div>
@@ -297,7 +296,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >Tri ring Game</a>
+                                <a href="#">Tri ring Game</a>
                             </h2>
                         </div>
                     </div>
@@ -380,7 +379,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >Table Tennis Indoor</a>
+                                <a href="#">Table Tennis Indoor</a>
                             </h2>
                         </div>
                     </div>
@@ -392,7 +391,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >H I Pogo Jumper </a>
+                                <a href="#">H I Pogo Jumper </a>
                             </h2>
                         </div>
                     </div>
@@ -427,7 +426,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >5 Key Xylophone</a>
+                                <a href="#">5 Key Xylophone</a>
                             </h2>
                         </div>
                     </div>
@@ -439,7 +438,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >Smart Track Toy</a>
+                                <a href="#">Smart Track Toy</a>
                             </h2>
                         </div>
                     </div>
@@ -451,7 +450,7 @@
                         </div>
                         <div class="jk-banner-item-content">
                             <h2 class="text-center">
-                                <a href="#"  >5 Key Xylophone</a>
+                                <a href="#">5 Key Xylophone</a>
                             </h2>
                         </div>
                     </div>
