--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/banner_1.jpeg" class="d-block w-100" alt="banner_1">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="...">
+                    <img src="./assets/img/banner_2.jpeg" class="d-block w-100" alt="banner_2">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
