add banner in home page new

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </section>
     <!-- banner top end -->
     <!-- product start-->
-    <section class="jk-banner-area pt-4">
+    <section class="jk-banner-area">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
