add educational page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Educational Toy</a>
+                                                    <a class="dropdown-item" href="educational.html"> Educational Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
@@ -183,10 +183,10 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="#">Educational Toy</a> </li>
-                <li><a href="#">Construction Toy</a></li>
-                <li><a href="#">Board Game</a></li>
-                <li><a href="#">Musical Toy</a></li>
+                <li><a href="educational.html">Educational Toy</a> </li>
+                <li><a href="construction.html">Construction Toy</a></li>
+                <li><a href="board_game.html">Board Game</a></li>
+                <li><a href="musical_toy.html">Musical Toy</a></li>
                 <li><a href="#">Puzzle Game</a></li>
                 <li><a href="#">Building Blocks</a></li>
                 <li><a href="#">Sports Toy</a></li>
@@ -581,7 +581,7 @@
         </div>
     </section>
     <!-- product end-->
-    <!-- contact start -->
+    <!-- footer start -->
     <section class="contact">
         <div class="container-fluid px-5">
             <div class="row">
@@ -653,7 +653,7 @@
             </div>
         </div>
     </section>
-    <!-- contact end -->
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
 
