--- a/products.html
+++ b/products.html
@@ -54,24 +54,26 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Educational Toy</a>
+                                                    <a class="dropdown-item" href="educational.html"> Educational
+                                                        Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#">Construction Toy </a>
+                                                    <a class="dropdown-item" href="construction.html">Construction Toy
+                                                    </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#"> Board Game</a>
+                                                    <a class="dropdown-item" href="board_game.html"> Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="#">Musical Toy</a>
+                                                    <a class="dropdown-item" href="musical_toy.html">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -1163,7 +1165,7 @@
         </div>
     </section>
     <!-- Product section end -->
-    <!-- contact start -->
+    <!-- footer start -->
     <section class="contact">
         <div class="container-fluid px-5">
             <div class="row">
@@ -1235,7 +1237,7 @@
             </div>
         </div>
     </section>
-    <!-- contact end -->
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
 
