--- a/shilpra-play-house.html
+++ b/shilpra-play-house.html
@@ -348,7 +348,7 @@
         </div>
     </section>
     <!-- product end-->
-    <!-- contact start -->
+    <!-- footer start -->
     <section class="contact">
         <div class="container-fluid px-5">
             <div class="row">
@@ -420,7 +420,7 @@
             </div>
         </div>
     </section>
-    <!-- contact end -->
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js"></script>
 </body>
